Get's all entities updated for v0.4.4, and fixes a few issues that cropped up because of the update.

--- a/starfinder.css
+++ b/starfinder.css
@@ -270,6 +270,9 @@
   height: 50px;
   font-size: 36px;
 }
+.starfinder.sheet .sheet-header img {
+  margin-right: 0;
+}
 .starfinder.sheet .sheet-header img.profile {
   flex: 0 0 100px;
   height: 100px;
